gcc/testsuite/algol68/compile/error-mode-stropping-9.a68
# { dg-options "-fstropping=upper" }  #
BEGIN LONG INT j;
      j := "joo" { dg-error "CHAR.*LONG INT" }
END
